Mejora de la interfaz de usuario y responsividad
Se ha añadido un toggle deslizante para el estado civil en el modal de usuario, reemplazando el campo de selección anterior. Se han importado los módulos necesarios para su funcionamiento. Además, se han implementado estilos CSS para hacer la tabla en la lista de personas completamente responsiva, optimizando la visualización en diferentes tamaños de pantalla.

--- a/gmltec.frontend/src/app/feature/person/list-person/list-person.component.css
+++ b/gmltec.frontend/src/app/feature/person/list-person/list-person.component.css
@@ -57,3 +57,23 @@ button[mat-raised-button]:hover {
 .custom-table {
   width: 100%;
 }
+
+
+.table-responsive {
+  width: 100%;
+  overflow-x: auto;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .mat-header-cell, .mat-cell {
+    padding: 8px;
+  }
+}
+
