--- a/gmltec.frontend/src/app/feature/person/add-user-modal/add-user-modal.component.html
+++ b/gmltec.frontend/src/app/feature/person/add-user-modal/add-user-modal.component.html
@@ -49,15 +49,12 @@
       </mat-form-field>
     </div>
 
-    <div class="col-md-6">
-      <mat-form-field class="w-100">
-        <mat-label>Estado Civil</mat-label>
-        <mat-select formControlName="maritalStatus">
-          <mat-option [value]="true">Casado</mat-option>
-          <mat-option [value]="false">Soltero</mat-option>
-        </mat-select>
-      </mat-form-field>
+    <div class="col-md-6 d-flex align-items-center">
+      <mat-slide-toggle formControlName="maritalStatus" color="primary" class="custom-toggle">
+        <span class="toggle-label">Casado</span>
+      </mat-slide-toggle>
     </div>
+
 
   </form>
 </div>
